--- a/app/src/main/res/layout/activity_inactive.xml
+++ b/app/src/main/res/layout/activity_inactive.xml
@@ -4,12 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.buzzme.MainActivity">
+    tools:context="com.example.buzzme.InactiveActivity">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="MainActivity"
+        android:text="InactiveActivity"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -26,15 +26,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:menu="@menu/bottom_navigation_main"
         tools:layout_editor_absoluteX="0dp" />
-
-    <ImageButton
-        android:id="@+id/addProjectButton"
-        style="@android:style/Widget.Holo.Light.ImageButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@android:drawable/ic_input_add"
-        tools:layout_editor_absoluteX="319dp"
-        tools:layout_editor_absoluteY="4dp"
-        android:onClick="onClick"/>
 
 </android.support.constraint.ConstraintLayout>
