--- a/app/src/main/res/menu/bottom_navigation_main.xml
+++ b/app/src/main/res/menu/bottom_navigation_main.xml
@@ -5,19 +5,16 @@
     <item
         android:id="@+id/action_active_project"
         android:enabled="true"
-        android:icon="@drawable/ic_nav_active_project"
-        android:title="ActiveProject"
+        android:title="Active"
         app:showAsAction="ifRoom"/>
     <item
         android:id="@+id/action_inactive_project"
         android:enabled="true"
-        android:icon="@drawable/ic_nav_inactive_project"
-        android:title="InactiveProject"
+        android:title="Inactive"
         app:showAsAction="ifRoom"/>
     <item
         android:id="@+id/action_overview_project"
         android:enabled="true"
-        android:icon="@drawable/ic_nav_overview_project"
-        android:title="OverviewProject"
+        android:title="Overview"
         app:showAsAction="ifRoom"/>
 </menu>
