--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:weightSum="4">
 
-    <LinearLayout
+ <!--   <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="3"
@@ -134,6 +134,8 @@
 
         </LinearLayout>
 
-    </RelativeLayout>
+    </RelativeLayout>-->
+
+
 
 </LinearLayout>
