Connected Firebase and implemented a test case; Login Screen currently skipped (see SplashActivity.java)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     tools:context="com.example.buzzme.MainActivity">
 
     <TextView
+        android:id="@+id/showFirebaseData"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/label_main_activity"
