--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,6 +7,13 @@
     android:orientation="vertical"
     android:weightSum="4">
 
+    <com.google.android.gms.common.SignInButton
+        android:id="@+id/google_signIn_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+ </LinearLayout>
+
  <!--   <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -136,6 +143,3 @@
 
     </RelativeLayout>-->
 
-
-
-</LinearLayout>
