--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,7 +12,22 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
- </LinearLayout>
+    <Button
+        android:id="@+id/btnRegistration"
+        android:onClick="btnRegistration_Click"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Registration" />
+
+    <Button
+        android:id="@+id/btnLogin"
+        android:onClick="btnLogin_Click"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Login " />
+
+
+</LinearLayout>
 
  <!--   <LinearLayout
         android:layout_width="match_parent"
