--- a/app/src/main/res/layout/activity_active.xml
+++ b/app/src/main/res/layout/activity_active.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.buzzme.MainActivity">
+    tools:context="com.example.buzzme.ActiveActivity">
 
     <TextView
         android:id="@+id/showFirebaseData"
@@ -43,6 +43,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:onClick="btnAddProject_Click"
 
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -60,5 +61,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_begin="20dp" />
+
+
 
 </android.support.constraint.ConstraintLayout>
