--- a/app/src/main/res/layout/activity_active.xml
+++ b/app/src/main/res/layout/activity_active.xml
@@ -34,6 +34,11 @@
         app:layout_constraintVertical_bias="1.0"
         app:menu="@menu/bottom_navigation_main" />
 
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/activeRecyclerView"/>
+
     <ImageButton
         android:id="@+id/addProjectButton"
         style="@android:style/Widget.Holo.Light.ImageButton"
@@ -61,7 +66,6 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_begin="20dp" />
-
 
 
 </android.support.constraint.ConstraintLayout>
