--- a/app/src/main/res/layout/overview_project_list.xml
+++ b/app/src/main/res/layout/overview_project_list.xml
@@ -30,13 +30,17 @@
                 android:layout_width="240dp"
                 android:layout_height="43dp"
                 android:layout_alignParentEnd="true"
-                android:layout_marginLeft="5dp"
-                android:layout_toRightOf="@id/btnEdit"
+                android:layout_marginStart="5dp"
+                android:layout_toEndOf="@id/btnEdit"
                 android:gravity="center_vertical|center_horizontal"
                 android:paddingTop="5dp"
-                android:text="Name"
+                android:text="Projektname"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
-                android:textColor="#000000" />
+                android:textColor="#000000"
+                android:autoSizeTextType="uniform"
+                android:autoSizeMaxTextSize="100dp"
+                android:autoSizeMinTextSize="12dp"
+                android:autoSizeStepGranularity="2sp"/>
 
             <TextView
                 android:id="@+id/textViewTime"
@@ -44,13 +48,17 @@
                 android:layout_height="47dp"
                 android:layout_alignParentEnd="false"
                 android:layout_below="@+id/textViewTitle"
-                android:layout_marginLeft="5dp"
-                android:layout_toRightOf="@id/btnEdit"
+                android:layout_marginStart="5dp"
+                android:layout_toEndOf="@id/btnEdit"
                 android:gravity="center"
                 android:text="3T 5H 30M"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                 android:textStyle="bold"
-                tools:paddingBottom="5dp" />
+                tools:paddingBottom="5dp"
+                android:autoSizeTextType="uniform"
+                android:autoSizeMaxTextSize="100dp"
+                android:autoSizeMinTextSize="12dp"
+                android:autoSizeStepGranularity="2sp"/>
 
         </RelativeLayout>
 
