--- a/app/src/main/res/layout/active_project_list.xml
+++ b/app/src/main/res/layout/active_project_list.xml
@@ -22,7 +22,7 @@
                 android:layout_height="74dp"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
-                android:text="BuzzMe" />
+                android:text="@string/app_name" />
 
             <TextView
                 android:id="@+id/textViewTitle"
@@ -31,18 +31,16 @@
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
                 android:layout_marginStart="36dp"
-                android:text="TextView" />
+                android:text="@string/projectName" />
 
             <Switch
-                android:id="@+id/switch1"
+                android:id="@+id/toggleStatus"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
                 android:layout_marginEnd="28dp"
-                android:text="Switch" />
-
-
+                android:textOn="on" />
 
         </RelativeLayout>
 
