--- a/app/src/main/res/layout/activity_add_project.xml
+++ b/app/src/main/res/layout/activity_add_project.xml
@@ -14,7 +14,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0"
-        android:hint="Name"
+        android:hint="@string/projectName"
         android:layout_marginBottom="14dp"/>
 
     <RelativeLayout
@@ -25,17 +25,17 @@
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft ="true"
+            android:layout_alignParentStart ="true"
             android:layout_centerInParent="true"
             android:textSize="18sp"
-            android:text="Farbe" />
+            android:text="@string/colorpicker" />
 
         <Button
             android:id="@+id/button_color"
             android:layout_width="@dimen/color_button"
             android:layout_height="@dimen/color_button"
             android:background="@drawable/button_with_border"
-            android:layout_alignParentRight ="true"/>
+            android:layout_alignParentEnd ="true"/>
 
     </RelativeLayout>
 
@@ -43,16 +43,16 @@
         android:layout_width="match_parent"
         android:layout_height="0dip"
         android:layout_weight="1"
-        android:gravity="right|bottom"
+        android:gravity="end"
         android:orientation="horizontal">
 
         <Button
             android:id="@+id/btnCancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Abbrechen"
+            android:text="@string/btn_abort"
             android:onClick="btnCancel_Click"
-            android:drawableLeft="@drawable/ic_save_cancel"/>
+            android:drawableStart="@drawable/ic_save_cancel"/>
 
         <Button
             android:id="@+id/btnSave"
@@ -60,52 +60,9 @@
             android:onClick="btnSave_Click"
             android:layout_height="wrap_content"
             android:backgroundTint="@android:color/holo_green_light"
-            android:text="Speichern"
-            android:drawableLeft="@drawable/ic_save_check"/>
+            android:text="@string/btn_save"
+            android:drawableStart="@drawable/ic_save_check"/>
 
     </LinearLayout>
 
 </LinearLayout>
-<!--
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="60dp"
-        android:layout_height="35dp"
-        android:text="Name:"
-        android:textSize="18sp"
-        tools:layout_editor_absoluteX="24dp"
-        tools:layout_editor_absoluteY="26dp" />
-
-    <EditText
-        android:id="@+id/editText3"
-        android:layout_width="226dp"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        tools:layout_editor_absoluteX="84dp"
-        tools:layout_editor_absoluteY="16dp" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Farbe:"
-        android:textSize="18sp"
-        tools:layout_editor_absoluteX="24dp"
-        tools:layout_editor_absoluteY="90dp" />
-
-    <Spinner
-        android:id="@+id/spinner"
-        android:layout_width="143dp"
-        android:layout_height="29dp"
-        tools:layout_editor_absoluteX="84dp"
-        tools:layout_editor_absoluteY="90dp" />
-
-</android.support.constraint.ConstraintLayout>-->
