Anpassung Splash: Handler statt Timer --> so ist das schließen der Activity möglich Zurücknavigation angepasst Nach jedem new intent muss ein finish() eingefügt werden, damit nur eine Activity geöffnet ist Loadingbar wurde hinzugefügt der Fehler bei leeren Email und Passwortfelder wurde behoben

--- a/app/src/main/res/layout/activity_add_project.xml
+++ b/app/src/main/res/layout/activity_add_project.xml
@@ -8,6 +8,16 @@
     android:paddingBottom="5dp"
     android:orientation="vertical"
     >
+    <ProgressBar
+        android:id="@+id/prbarAddProject"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:max="100"
+        android:layout_below="@+id/framelauout"
+        android:indeterminateTint="#1a09d6"
+        android:layout_marginTop="-7dp"/>
 
     <EditText
         android:id="@+id/name_new_project"
