--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -7,7 +7,16 @@
     android:orientation="vertical"
     tools:context=".RegistrationActivity">
 
-
+    <ProgressBar
+    android:id="@+id/prbarRegistration"
+    style="?android:attr/progressBarStyleHorizontal"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:indeterminate="true"
+    android:max="100"
+    android:layout_below="@+id/framelauout"
+    android:indeterminateTint="#1a09d6"
+    android:layout_marginTop="-7dp"/>
     <EditText
         android:id="@+id/txtEmailRegistration"
         android:layout_width="wrap_content"
