--- a/app/src/main/res/layout/active_project_list.xml
+++ b/app/src/main/res/layout/active_project_list.xml
@@ -40,6 +40,7 @@
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
                 android:layout_marginEnd="28dp"
+                android:checked="true"
                 android:textOn="on" />
 
         </RelativeLayout>
