--- a/app/src/main/res/layout/active_project_list.xml
+++ b/app/src/main/res/layout/active_project_list.xml
@@ -17,7 +17,7 @@
             android:padding="8dp">
 
             <Button
-                android:id="@+id/btnBackground"
+                android:id="@+id/btnBuzzme"
                 android:layout_width="wrap_content"
                 android:layout_height="74dp"
                 android:layout_alignParentTop="true"
