--- a/app/src/main/res/layout/activity_inactive.xml
+++ b/app/src/main/res/layout/activity_inactive.xml
@@ -24,13 +24,17 @@
         app:layout_constraintVertical_bias="1.0"
         app:menu="@menu/bottom_navigation_main" />
 
-    <TextView
+
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/inactiveRecyclerView"/>
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="InactiveActivity"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="20dp" />
 
 </android.support.constraint.ConstraintLayout>
