Tastatur verschwindet überall bei Klick daneben + AddProject: Name einzeilig + einheitliche Position Abbrechen-/Speichern-Buttons + Aufräumen strings.xml

--- a/app/src/main/res/layout/activity_add_project.xml
+++ b/app/src/main/res/layout/activity_add_project.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/addProjectLayout"
+    android:id="@+id/add_project_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="16dp"
@@ -16,7 +16,6 @@
         android:layout_height="wrap_content"
         android:indeterminate="true"
         android:max="100"
-        android:layout_below="@+id/framelauout"
         android:indeterminateTint="#1a09d6"
         android:layout_marginTop="-7dp"/>
 
@@ -26,6 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="0"
         android:hint="@string/projectName"
+        android:maxLines="1"
         android:layout_marginBottom="14dp"/>
 
     <RelativeLayout
@@ -55,13 +55,14 @@
         android:layout_height="0dip"
         android:layout_weight="1"
         android:gravity="end"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_marginTop="15dp">
 
         <Button
             android:id="@+id/btnCancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/btn_abort"
+            android:text="@string/btn_canel"
             android:onClick="btnCancel_Click"
             android:drawableStart="@drawable/ic_save_cancel"/>
 
