--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/registration_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -14,7 +15,6 @@
     android:layout_height="wrap_content"
     android:indeterminate="true"
     android:max="100"
-    android:layout_below="@+id/framelauout"
     android:indeterminateTint="#1a09d6"
     android:layout_marginTop="-7dp"/>
     <EditText
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:ems="10"
-        android:hint="E-Mail"
+        android:hint="@string/e_mail"
         android:inputType="textEmailAddress" />
 
 
@@ -33,7 +33,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:ems="10"
-        android:hint="Passwort"
+        android:hint="@string/password"
         android:inputType="textPassword" />
 
     <Button
@@ -43,6 +43,6 @@
         android:layout_marginTop="24dp"
 
         android:onClick="btnRegistrationUser_Click"
-        android:text="Konto anlegen" />
+        android:text="@string/btn_new_account" />
 
 </LinearLayout>
