--- a/app/src/main/res/menu/appbar.xml
+++ b/app/src/main/res/menu/appbar.xml
@@ -5,6 +5,6 @@
         android:id="@+id/action_add_project"
         android:enabled="true"
         android:icon="@drawable/ic_add_project"
-        android:title='Projekt hinzufügen'
+        android:title="@string/new_project"
         app:showAsAction="always" />
 </menu>
