fixed problem with crash on start: if to finishtimer; implemented time format; changed "timestamp" to "timestamps"; changed "Zeit ändern" to "Zeit hinzufügen"; fixed inactive/active toggle (timestamps got deleted);

--- a/app/src/main/res/layout/activity_add_project.xml
+++ b/app/src/main/res/layout/activity_add_project.xml
@@ -62,7 +62,7 @@
             android:id="@+id/btnCancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/btn_canel"
+            android:text="@string/btn_cancel"
             android:onClick="btnCancel_Click"
             android:drawableStart="@drawable/ic_save_cancel"/>
 
