--- a/app/src/main/res/layout/inactive_project_list.xml
+++ b/app/src/main/res/layout/inactive_project_list.xml
@@ -22,7 +22,8 @@
                 android:layout_height="74dp"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
-                android:text="@string/app_name" />
+                android:text="ZzzZzzzz"
+                android:textAllCaps="false" />
 
             <TextView
                 android:id="@+id/textViewTitle"
