Implemented "Projekt löschen" in addTime activity; changed "Zeit hinzufügen" to "Bearbeiten"

--- a/app/src/main/res/layout/activity_add_time.xml
+++ b/app/src/main/res/layout/activity_add_time.xml
@@ -69,4 +69,12 @@
 
     </LinearLayout>
 
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#b74c4c"
+        android:onClick="btnDelete_Click"
+        android:text="@string/btn_deleteproject" />
+
 </LinearLayout>
