--- a/app/src/main/res/layout/overview_project_list.xml
+++ b/app/src/main/res/layout/overview_project_list.xml
@@ -21,7 +21,7 @@
                 android:layout_width="120dp"
                 android:layout_height="90dp"
                 android:padding="4dp"
-                android:text="@string/change_time"
+                android:text="@string/change_project"
                 android:textColorLink="@color/cardview_light_background"
                 tools:textColorLink="@color/cardview_light_background" />
 
@@ -52,7 +52,7 @@
                 android:autoSizeStepGranularity="2sp"
                 android:autoSizeTextType="uniform"
                 android:gravity="center"
-                android:text="3T 5H 30M"
+                android:text="@string/placeholder_duration"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                 android:textStyle="bold"
                 tools:paddingBottom="5dp" />
