--- a/app/src/main/res/layout/active_project_list.xml
+++ b/app/src/main/res/layout/active_project_list.xml
@@ -22,16 +22,16 @@
                 android:layout_height="74dp"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
-                android:text="@string/app_name" />
+                android:text="@string/app_name"/>
 
             <TextView
                 android:id="@+id/textViewTitle"
-                android:layout_width="wrap_content"
+                android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
-                android:layout_marginStart="36dp"
-                android:text="@string/projectName" />
+                android:gravity="center"
+                android:text="@string/project_name" />
 
             <Switch
                 android:id="@+id/toggleStatus"
