--- a/app/src/main/res/layout/activity_add_project.xml
+++ b/app/src/main/res/layout/activity_add_project.xml
@@ -24,7 +24,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0"
-        android:hint="@string/projectName"
+        android:hint="@string/project_name"
         android:maxLines="1"
         android:layout_marginBottom="14dp"/>
 
