--- a/app/src/main/res/layout/inactive_project_list.xml
+++ b/app/src/main/res/layout/inactive_project_list.xml
@@ -22,17 +22,18 @@
                 android:layout_height="74dp"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
-                android:text="ZzzZzzzz"
+                android:text="@string/btn_project_inactive"
                 android:textAllCaps="false" />
 
             <TextView
                 android:id="@+id/textViewTitle"
-                android:layout_width="wrap_content"
+                android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
-                android:layout_marginStart="36dp"
-                android:text="@string/projectName" />
+                android:gravity="center"
+                android:layout_marginStart="5dp"
+                android:text="@string/project_name" />
 
             <Switch
                 android:id="@+id/toggleStatus"
