--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -9,14 +9,15 @@
     tools:context=".RegistrationActivity">
 
     <ProgressBar
-    android:id="@+id/prbarRegistration"
-    style="?android:attr/progressBarStyleHorizontal"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:indeterminate="true"
-    android:max="100"
-    android:indeterminateTint="#1a09d6"
-    android:layout_marginTop="-7dp"/>
+        android:id="@+id/prbarRegistration"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="-7dp"
+        android:indeterminate="true"
+        android:indeterminateTint="#1a09d6"
+        android:max="100" />
+
     <EditText
         android:id="@+id/txtEmailRegistration"
         android:layout_width="wrap_content"
